--- a/atsu_app/templates/atsu_app/navbar.html
+++ b/atsu_app/templates/atsu_app/navbar.html
@@ -1,14 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <div class="container-fluid">
-         <a class="navbar-brand" href="#">
+        <a class="navbar-brand me-auto" href="#">
             <img src="{% static 'images/logo.png' %}" alt="ATSU Logo" height="30" class="d-inline-block align-text-top">
         </a>
+
+        <!-- Uploads Counter -->
+        <div class="d-flex align-items-center me-3" id="uploadsCounter">
+            <span class="me-1">Uploads Left:</span>
+            <span id="uploadsLeft" class="ms-1">3</span>
+        </div>
+
+        <!-- Auth Buttons -->
+        <div class="d-flex">
+            <a href="#" class="btn btn me-2" id="signInBtn">Sign In/Up</a>
+        </div>
     </div>
-{% block content %}
 
-
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 </nav>
