--- a/atsu_app/templates/atsu_app/bundles.html
+++ b/atsu_app/templates/atsu_app/bundles.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+{% block content %}
     <div class="pricing-header text-center mb-5">
         <h1>Choose Your Plan!</h1>
         <p class="lead">Select the perfect plan to enhance your job application process with our powerful tools and features.</p>
@@ -51,5 +52,6 @@
             </div>
         </div>
     </div>
+{% endblock %}
 </body>
 </html>
