--- a/atsu_app/templates/atsu_app/index.html
+++ b/atsu_app/templates/atsu_app/index.html
@@ -51,9 +51,7 @@
              <a href="{% url 'bundles' %}" class="btn btn-outline-secondary me-2">
                 <i class="bi bi-lock-fill me-1"></i> More
             </a>
-            <button type="submit" class="btn btn-primary submit-btn">
-                <i class="bi bi-upload me-1"></i> Submit Documents
-            </button>
+            <a href="{% url 'results' %}" class="btn btn-primary submit-btn"> Submit Documents</a>
         </div>
     </form>
     <div id="uploadStatus" class="status-message"></div>
