--- a/atsu_app/templates/atsu_app/results.html
+++ b/atsu_app/templates/atsu_app/results.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
+{% load static %}
+{% include 'atsu_app/navbar.html' %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+     <title>{% block title %}ATSU - Pricing{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+{% block content %}
+
+
+{% endblock %}
 
 </body>
 </html>
